--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
         <header id="header">
             <h1 id="page-title">VCS LO1E 2.4 - Conflicten</h1>
-            <p id="naam">Naam van Student</p>
+            <p id="naam">Yago Schipper</p>
             <p id="version">Versie: 1.0</p>
         </header>
 
