foto toegevoegd/veranderd

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <h2>2. Afbeeldingen toevoegen</h2>
                     </div>
                     <div class="meta">
-                        <img src="images/pictures.png">
+                        <img src="images/strijder.jpg">
                     </div>
                 </header>
 
